[project]
name = "column-summary"
version = "0.1.0"
description = "Produce a DataFrame with summary information for each column"
authors = [{ name = "Chris", email = "chris@cjrobson.com" }]
dependencies = ["pandas>=2.2.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/column_summary"]
